@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/IccUtilsLib.lib"/>
+				OutputFile="Debug/IccUtilsLib.lib"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
@@ -71,7 +71,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/IccUtilsLib.lib"/>
+				OutputFile="Release/IccUtilsLib.lib"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
